# oglskeleton

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
src/: ContextGLFW.cpp  main.cpp
